[package]
name = "simple_jvmti"
version = "0.1.0"
authors = ["Helly Guo <hellyguo@foxmail.com>"]
edition = "2021"
exclude = []
homepage = "https://simple_jvmti.itcraft.cn"
repository = "https://github.com/itcraft-cn/simple_jvmti"
license = "Apache-2.0"
readme = "README.md"
description = "simple jvmti library"
categories = ["api-bindings"]
documentation = ""
keywords = ["jvmti", "jvm", "java", "java-agent", "jni"]

# https://substrate.stackexchange.com/questions/9011/warning-some-crates-are-on-edition-2021-which-defaults-to-resolver-2
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
jni = "0.21.1"
thiserror = "1.0.50"

[dev-dependencies]
